cmake_minimum_required(VERSION 3.27)
project(Cedacri C)

set(CMAKE_C_STANDARD 11)

add_executable(Ex1.1 1.1.c)
add_executable(Ex1.2 1.2.c)
add_executable(Ex2.1 2.1.c)
add_executable(Ex2.2 2.2.c)
add_executable(Ex3.1 3.1.c)
add_executable(Ex4.1 4.1.c)
add_executable(Ex5 5.c)
add_executable(Ex6 6.c)
add_executable(Ex7 7.c)